Corrects margin layout breakpoint

--- a/ui/css/homepage.css
+++ b/ui/css/homepage.css
@@ -346,7 +346,7 @@ https://caniuse.com/#feat=css3-colors
 
     /*  PAGE MARGINS LAYOUT BREAKPOINT 1 -- 1100px */
     /*  Prevents columns from getting too wide at upper end of Medium width range */
-    @media screen and (min-width: 1100px) and (max-width: 1368px) {
+    @media screen and (min-width: 1100px) and (max-width: 1367px) {
 
       /* Keep content of organism containers at 1100px width but run lateral padding to
          edge of screen so the borders and background colours don't show a gap */
